compiler/tests/template/success/sum_10_20.jazz
fn sum10 (reg ptr u64[10] r) -> reg u64 {
  reg u64 res = 0;
  reg u64 i = 0;
  while (i < 10) {
    res += r[i];
    i += 1;
  }
  return res;
}

fn sum20 (reg ptr u64[20] r) -> reg u64 {
  reg u64 res = 0;
  reg u64 i = 0;
  while (i < 20) {
    res += r[i];
  }
  return res;
}

export fn main () -> reg u64 {
  stack u64[20] s;
  inline int i;
  for i = 0 to 20 {
    s[i] = i;
  }

  reg u64 res10 = sum10 (s[0:10]);

  reg u64 res20 = sum20 (s);

  reg u64 res = res10 + res20;

  return res;
}
